# gsc-plugins

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  ECOSYSTEM.md  LICENSE  README.md  TASKFLOW-WEBGEN-INTEGRATION-SUMMARY.md  verify-taskflow-integration.sh
.claude-plugin/: marketplace.json
.tasks/: config.json  state.json
.tasks/tags/master/: tasks.json
_build/: inline-templates.sh
_build/frameworks/: api-pattern.md  auth-strategy.md  database-selection.md  framework-selection.md
_build/templates/: api-design.md  code-review-template.md  database-design.md  deployment-guide.md  orchestration-protocol.md  setup-guide.md  tech-stack-decision.md  testing-guide.md
docs/: PROPOSED-ADDITIONS.md  local-md-schema.md
plugins/appgen/: README.md
plugins/appgen/.claude-plugin/: plugin.json
plugins/appgen/agents/: appgen-code-reviewer.md  appgen-orchestrator.md  appgen.md
plugins/appgen/commands/: appgen.md
plugins/appgen/docs/: ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md
plugins/docs/: README.md
plugins/docs/.claude-plugin/: plugin.json
plugins/docs/_core/: config-loader.md
plugins/docs/commands/: docs-init.md  docs-reconcile.md  docs-validate.md
plugins/docs/docs/: usage.md
plugins/docs/templates/: frontmatter-schema.md  guide-template.md
plugins/plane/: .mcp.json
plugins/plane/.claude-plugin/: plugin.json
plugins/plane/mcp/: .env.example  .gitignore  README.md  pyproject.toml
plugins/plane/mcp/src/plane_mcp/: __init__.py  __main__.py  client.py  config.py  db_client.py  server.py
plugins/taskflow/: README.md
plugins/taskflow/.claude-plugin/: plugin.json
plugins/taskflow/_core/: backend-interface.md  backend-loader.md  command-preamble.md  epic-strategy.md  task-hygiene.md
plugins/taskflow/commands/: task-add.md  task-expand.md  task-init.md  task-list.md  task-migrate-config.md  task-next.md  task-parse.md  task-show.md  task-status.md  task-tag.md  task.md
plugins/taskflow/config/: default-config.json
plugins/taskflow/docs/: design.md
plugins/webgen/: README.md
plugins/webgen/.claude-plugin/: plugin.json
plugins/webgen/agents/: webgen-code-reviewer.md  webgen-orchestrator.md  webgen.md
plugins/webgen/commands/: webgen.md
plugins/webgen/docs/: ARCHITECTURE.md  (+6 more)
plugins/worklog/: .mcp.json  README.md
plugins/worklog/mcp/: .env.example  .gitignore  README.md  pyproject.toml
plugins/worklog/mcp/src/worklog_mcp/: __init__.py  __main__.py  config.py  database.py  server.py
plugins/worklog/mcp/src/worklog_mcp/tools/: __init__.py
plugins/worklog/mcp/tests/: __init__.py  test_tools.py
(+52 files in other folders)
