[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plane-mcp"
version = "0.1.0"
description = "MCP server for Plane.so project management - workspaces, projects, pages, and issues"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "gs", email = "gs@atlas" }
]
keywords = ["mcp", "plane", "project-management", "knowledge-base", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "respx>=0.21.0",
]

[project.scripts]
plane-mcp = "plane_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/plane_mcp"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
