[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worklog-mcp"
version = "0.1.0"
description = "MCP server for structured access to the shared worklog knowledge base"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "gs", email = "gs@ubuntu-mini" }
]
keywords = ["mcp", "worklog", "knowledge-base", "sqlite", "postgresql", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
postgresql = [
    "asyncpg>=0.29.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "asyncpg>=0.29.0",
]

[project.scripts]
worklog-mcp = "worklog_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/worklog_mcp"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
